--- a/config/corne.conf
+++ b/config/corne.conf
@@ -41,7 +41,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 # CONFIG_ZMK_IDLE_TIMEOUT=7200000
 
 # Turn on mouse
-CONFIG_ZMK_MOUSE=y
+# CONFIG_ZMK_MOUSE=y
 # CONFIG_ZMK_TRACKBALL_PIM447=y
 
 # Make Bluetooth stronger
