--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -14,5 +14,5 @@ CONFIG_ZMK_MOUSE=y
 CONFIG_I2C=y
 # CONFIG_ZMK_TRACKBALL_PIM447=y
 # CONFIG_ZMK_TRACKBALL_PIM447_LED_ON=y
-# CONFIG_ZMK_PIMORONI_PIM447=y
+CONFIG_ZMK_PIMORONI_PIM447=y
 # CONFIG_ZMK_PIMORONI_PIM447_LED_ON=y
