--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -16,3 +16,14 @@ CONFIG_I2C=y
 # CONFIG_ZMK_TRACKBALL_PIM447_LED_ON=y
 CONFIG_ZMK_PIMORONI_PIM447=y
 # CONFIG_ZMK_PIMORONI_PIM447_LED_ON=y
+
+# 마우스 감도 설정 (기본값: 1, 높을수록 빠름)
+CONFIG_ZMK_PIMORONI_PIM447_SENSITIVITY=2
+
+# 마우스 스크롤 속도 설정 (기본값: 1, 높을수록 빠름)
+CONFIG_ZMK_PIMORONI_PIM447_SCROLL_SENSITIVITY=1
+
+# 마우스 가속 활성화 (활성화 시 감도가 더 동적으로 조절됨)
+# CONFIG_ZMK_PIMORONI_PIM447_MOUSE_DPI_BASE=400 (기본 DPI 설정, 필요시 조절)
+# CONFIG_ZMK_PIMORONI_PIM447_MOUSE_DPI_THRESHOLD=5000 (특정 속도 이상에서 가속 적용 기준)
+CONFIG_ZMK_PIMORONI_PIM447_MOUSE_ACCEL=y
