--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -10,7 +10,7 @@ CONFIG_ZMK_SPLIT_ROLE_CENTRAL=y
 
 CONFIG_SENSOR=y
 CONFIG_INPUT=y
-CONFIG_ZMK_INPUT=y 
+# CONFIG_ZMK_INPUT=y 
 CONFIG_ZMK_MOUSE=y
 CONFIG_I2C=y
 # CONFIG_ZMK_TRACKBALL_PIM447=y
