--- a/config/prj.conf
+++ b/config/prj.conf
@@ -2,3 +2,12 @@
 # CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_INPUT=y
 CONFIG_ZMK_MOUSE=y
+# USB HID 마우스 활성화
+CONFIG_ZMK_HID_MOUSE_ENABLE=y
+
+# Bluetooth HID 마우스 활성화 (블루투스 사용 시)
+CONFIG_ZMK_BT_GATT_MOUSE=y
+
+# 키보드/마우스 콤보 장치 설정 (필요한 경우)
+CONFIG_ZMK_HID_CONSUMER_ENABLE=y
+CONFIG_ZMK_HID_SYSTEM_ENABLE=y
