--- a/config/corne.conf
+++ b/config/corne.conf
@@ -43,6 +43,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 # Turn on mouse
 # CONFIG_ZMK_MOUSE=y
 # CONFIG_ZMK_TRACKBALL_PIM447=y
+CONFIG_ZMK_PIMORONI_PIM447=y
 
 # Make Bluetooth stronger
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
