--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -23,6 +23,8 @@ CONFIG_ZMK_PIMORONI_PIM447_AUTOMOUSE_TIMEOUT_MS=600
 # 트랙볼 동작 활성화 (기본값 y)
 CONFIG_ZMK_PIM447_BEHAVIORS=y
 
+CONFIG_PIMORONI_PIM447_LOG_LEVEL_DBG=y
+
 # 마우스 가속 활성화 (활성화 시 감도가 더 동적으로 조절됨)
 # CONFIG_ZMK_PIMORONI_PIM447_MOUSE_DPI_BASE=400 (기본 DPI 설정, 필요시 조절)
 # CONFIG_ZMK_PIMORONI_PIM447_MOUSE_DPI_THRESHOLD=5000 (특정 속도 이상에서 가속 적용 기준)
