--- a/config/corne_right.conf
+++ b/config/corne_right.conf
@@ -17,11 +17,11 @@ CONFIG_I2C=y
 # CONFIG_ZMK_TRACKBALL_PIM447_LED_ON=y
 # CONFIG_ZMK_PIMORONI_PIM447_LED_ON=y
 
-# CONFIG_ZMK_PIMORONI_PIM447=y
+CONFIG_ZMK_PIMORONI_PIM447=y
 # 트랙볼 사용 후 마우스 레이어 유지 시간 (예: 600ms)
 CONFIG_ZMK_PIMORONI_PIM447_AUTOMOUSE_TIMEOUT_MS=600
 # 트랙볼 동작 활성화 (기본값 y)
-# CONFIG_ZMK_PIM447_BEHAVIORS=y
+CONFIG_ZMK_PIM447_BEHAVIORS=y
 
 # CONFIG_PIMORONI_PIM447_LOG_LEVEL_DBG=y
 
