--- a/config/corne.dtsi
+++ b/config/corne.dtsi
@@ -12,7 +12,11 @@
                 zmk,kscan = &kscan0;
 		zmk,matrix_transform = &default_transform;
 	};
-
+	pim447_listener: pim447_listener {
+        compatible = "zmk,input-listener";
+        status = "okay";
+        device = <&pimoroni_pim447>;
+    };
 	default_transform: keymap_transform_0 {
 		compatible = "zmk,matrix-transform";
 		columns = <12>;
