--- a/config/corne.dtsi
+++ b/config/corne.dtsi
@@ -6,6 +6,17 @@
 
 #include <dt-bindings/zmk/matrix_transform.h>
 
+#include <layouts/foostan/corne/5column.dtsi>
+#include <layouts/foostan/corne/6column.dtsi>
+
+&foostan_corne_6col_layout {
+    transform = <&default_transform>;
+};
+
+&foostan_corne_5col_layout {
+    transform = <&five_column_transform>;
+};
+
 / {
 	chosen {
 		zephyr,display = &oled;
