--- a/config/corne.dtsi
+++ b/config/corne.dtsi
@@ -96,4 +96,13 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
 		inversion-on;
 		prechargep = <0x22>;
 	};
+
+	pimoroni_pim447: pimoroni_pim447@a {
+        compatible = "zmk,pimoroni-pim447";
+        status = "okay";
+        // 실제 사용되는 핀 번호로 수정 필요
+		int-gpios = <&gpio1 7 (GPIO_PULL_UP | GPIO_ACTIVE_LOW)>; 
+        reg = <0xa>;
+        automouse-layer = < 2 >;
+	 };
 };
