--- a/config/corne.dtsi
+++ b/config/corne.dtsi
@@ -78,7 +78,10 @@ RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)  RC(2,6) RC(2,7) RC(2,8) RC(2,9) RC(2,10
 };
 
 &pro_micro_i2c {
-	status = "okay";
+    status = "okay";
+    clock-frequency = <I2C_BITRATE_FAST>;
+    // I2C_BITRATE_STANDARD   100000
+    // I2C_BITRATE_FAST   400000
 
 	oled: ssd1306@3c {
 		compatible = "solomon,ssd1306fb";
